src/objects/netsuite_conn__Contract_Item__c.object
<CustomObject>
    <fields>
        <fullName>netsuite_conn__Bill_To_Customer_Discount__c</fullName>
        <label>Bill To Customer Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Bill_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>Contract_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract_Item_End_Date__c</fullName>
        <label>Contract Item End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract_Item_Order_Type__c</fullName>
        <label>Contract Item Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract - New</fullName>
                </value>
                <value>
                    <fullName>Contract - Upsell</fullName>
                </value>
                <value>
                    <fullName>Contract - Renewal</fullName>
                </value>
                <value>
                    <fullName>Contract - Downsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract_Item_Start_Date__c</fullName>
        <label>Contract Item Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract_Item_State__c</fullName>
        <label>Contract Item State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract_Item_Status__c</fullName>
        <label>Contract Item Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract_Item_Term__c</fullName>
        <label>Contract Item Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>Contract_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Items (End User)</relationshipLabel>
        <relationshipName>Contract_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Item_Category__c</fullName>
        <label>Item Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License - Perpetual</fullName>
                </value>
                <value>
                    <fullName>License - Term</fullName>
                </value>
                <value>
                    <fullName>Maintenance - New</fullName>
                </value>
                <value>
                    <fullName>Maintenance - Renewal</fullName>
                </value>
                <value>
                    <fullName>Support - New</fullName>
                </value>
                <value>
                    <fullName>Support - Renewal</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parent Item</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Services - Perpetual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>Contract_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Original_Line_Number__c</fullName>
        <label>Original Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Quantity_Type__c</fullName>
        <label>Quantity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product License</fullName>
                </value>
                <value>
                    <fullName>Module License</fullName>
                </value>
                <value>
                    <fullName>M/S Entitlement</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>User License - Production</fullName>
                </value>
                <value>
                    <fullName>User License - Other</fullName>
                </value>
                <value>
                    <fullName>CPU License</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Renew_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renew With</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Items (Renew With)</relationshipLabel>
        <relationshipName>Contract_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Renewal_Processed_On__c</fullName>
        <label>Renewal Processed On</label>
        <type>Date</type>
    </fields>
    <label>Contract Item</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Contract Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>